tests/build/cases/widget/module_path_missing_crate.stderr
error: expected a macro_rules `$crate` path to this widget mod
 --> cases/widget/module_path_missing_crate.rs:4:10
  |
4 | #[widget(widget)]
  |          ^^^^^^
